--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Redux Todo App</title>
-    </head>
-    <body>
-        <h1>Redux Todo App</h1>
-        <script src="bundle.js" type="text/javascript"></script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Redux Todo App</title>
+</head>
+
+<body>
+    <h1>Redux Todo App</h1>
+    <ul id="todo-list"></ul>
+    <form id="form">
+        <input type="text" id="todo-text" />
+        <button id="add-btn">ADD</button>
+    </form>
+    <script src="bundle.js" type="text/javascript"></script>
+</body>
+
 </html>
